# -Synthetic-Socio-Wind-Tunnel-

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
data/: lanecove_enriched.stats.json  lanecove_osm.geojson  lanecove_proj_center.json  overture_buildings.geojson  overture_places.geojson
docs/: README.md  WIP-progress-report.md  architecture.md  map_service_design.md  项目Brief.md  项目提案.md
openspec/: README.md  config.yaml
synthetic_socio_wind_tunnel/: __init__.py
tests/: conftest.py  test_agent_intent.py  test_agent_phase1.py  test_agent_population.py  test_agent_profile_personality.py  test_agent_profile_structural.py  test_agent_should_replan.py  test_atlas.py  test_attention_models.py  test_attention_service.py  test_carryover.py  test_cartography.py  test_digital_attention_filter.py  test_fitness_e1_e2_e3.py  test_fitness_phase1_phase2.py  test_fitness_profile_ledger_site_scale.py  test_fitness_report.py  test_intent_resolver.py  test_ledger.py  test_memory_debts_fixed.py  test_memory_models.py  test_memory_orchestrator_integration.py  test_memory_retrieval.py  test_memory_service.py  test_metrics_aggregator.py  test_metrics_contest.py  test_metrics_models.py  test_metrics_recorder.py  test_metrics_report.py  test_multi_day.py  test_observer_context_digital.py  test_orchestrator_determinism.py  test_orchestrator_encounters.py  test_orchestrator_hooks.py  test_orchestrator_models.py  test_orchestrator_tick_loop.py  test_perception.py  test_personality_models.py  test_plan_literal.py  test_planner_carryover.py  (+12 more)
tools/: diagnose_atlas.py  (+12 more)
(+212 files in other folders)
