[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-socio-wind-tunnel"
version = "0.5.0"
description = "AI multi-agent urban social simulation system for studying hyperlocal boundary penetration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
llm = ["anthropic"]
web = ["flask"]
map-enrichment = ["overturemaps", "shapely"]
full = ["anthropic", "flask", "overturemaps", "shapely"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
